<resources>
    <string name="app_name">Quick Entry</string>

    <string name="snack_bar_camera_permission_denied">Scanning QR code feature needs camera permission 😢</string>
    <string name="snack_bar_location_permission_denied">Please enable location permission for better experience</string>
    <string name="snack_bar_found_nric">NRIC barcode detected, saved successfully! </string>
    <string name="snack_bar_nric_mask">NRIC barcode hidden</string>
    <string name="snack_bar_action_view">View</string>

    <string name="hint_search_edit_text">Search location here</string>
    <string name="hint_nric">Your NRIC</string>
    <string name="hint_custom_name">Preferred location name</string>

    <string name="no_location_yet">---</string>

    <string name="content_description_checked_in">This icon indicates that you have checked-in to the location and you have not checked out from it.</string>
    <string name="content_description_location">This icon indicates the distance of the location from your current position/</string>
    <string name="content_desc_img_location_indicator">This image indicates whether the location is available.</string>
    <string name="content_desc_img_barcode">This is an NRIC barcode.</string>

    <string name="label_scanning">Looking for QR code or barcode</string>
    <string name="label_scanned">Found barcode!</string>

    <string name="label_scanned_nric">This is an NRIC barcode!</string>
    <string name="label_scanned_safe_entry">This is a SafeEntry URL!</string>
    <string name="label_scanned_invalid">This is neither a SafeEntry URL nor an NRIC barcode!</string>

    <string name="label_barcode_title_section">Your Barcode</string>
    <string name="label_barcode_none">No barcode saved yet!</string>

    <string name="label_location">Location</string>
    <string name="label_status">Status</string>
    <string name="label_original_name">Original Name</string>

    <string name="button_scan_barcode">Scan barcode</string>
    <string name="button_check_in">Check in</string>
    <string name="button_check_out">Check out</string>

    <string name="menu_credit">Credit</string>
    <string name="menu_barcode">My Barcode</string>
</resources>